--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 8px;
+    margin-top: 10px;
+
 }
 
 .project {
@@ -160,6 +162,12 @@ body {
 }
 .study-summary {
     font-weight: bold;
+}
+.studycenter {
+    font-style: italic;
+    font-size: 12px;
+    margin-bottom: 4px;
+    margin-top: 4px;
 }
 
 .study-date {
@@ -196,6 +204,8 @@ body {
     display: flex;
     flex-direction:row;
 }
+
+
 .contact-icons img {
     width: 40px;
     height: 40px;
@@ -311,9 +321,16 @@ body {
     background: lightgray;
     border: 2px inset;
     padding: 0 5px;
-    height: 28px;
+    height: 30px;
+    width: 100px;
     display: flex;
     align-items: center;
+}
+#taskbarVolume {
+    display: flex;
+   padding: 0 10px;
+   height: 20px;
+   width: 4px;
 }
 .copyright {
     font-family: 'MS Sans Serif', Tahoma, sans-serif;
