--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@ body {
     font-family: 'MS Sans Serif', Tahoma, sans-serif;
     background-color: #008080;
     color: black;
-    margin: 0;
-    padding: 20px;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+ 
     background-image: 
     url('https://win98icons.alexmeub.com/icons/png/help_question_mark-0.png'), 
     url('https://win98icons.alexmeub.com/icons/png/help_book_cool-4.png'), 
@@ -45,6 +47,7 @@ body {
     position: relative;
     display: flex; 
     flex-direction: column;
+    
 }
 
 .maximized {
@@ -101,6 +104,11 @@ body {
     border: 1px solid black;
     cursor: pointer;
 }
+.menu button:active,
+.menu button:focus {
+    background: darkgray;
+    outline: none;
+}
 
 .section {
     display: none;
@@ -115,15 +123,92 @@ body {
 .minimized {
     display: none;
 }
+.about-container {
+    display: flex;
+    flex-direction:column;
+   
+    margin-bottom: 20px;
+}
+
+.about-details {
+    display: flex;
+    flex-direction: column;
+    
+}
 .about-details p {
-    margin: 30px 0;
-    font-family: 'Press Start 2P', cursive;
+    margin: 5px 0;
+    text-align: justify;
+    font-family: 'MS Sans Serif', Tahoma, sans-serif;
 
 }
-.about-photo img {
-    width: 20%;
-    height: auto;
+.about-details a {
+    color: #0000EE;
+    text-decoration: none;
 }
+.about-details a:hover {
+    text-decoration: underline;
+}
+.about-photo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 20px;
+}
+.about-photo img {
+    width: 100px; /* Ajusta según sea necesario */
+    height: auto;
+    border: 2px solid black;
+}
+.download-cv {
+    background-color: #008080;
+    color: white;
+    border: none;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 0;
+    cursor: pointer;
+    font-family: 'MS Sans Serif', Tahoma, sans-serif;
+}
+
+.download-cv:hover {
+    background-color: #006666;
+}
+.experience-grid{
+  
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+   
+}
+.experience-item{
+    border: 2px solid black;
+    padding: 10px;
+    margin: 10px 0;
+    background: lightgray;
+    cursor: pointer;
+   
+}
+
+.experience-item:hover {
+    background: rgb(160, 160, 160);
+}
+.experience-summary {
+    font-weight: bold;
+}
+.experience-center {
+    font-style: italic;
+    font-size: 12px;
+    margin-bottom: 4px;
+    margin-top: 4px;
+}
+.experience-date {
+    font-style: italic;
+    color: darkblue;
+}
+
 
 .project-grid {
     display: grid;
@@ -136,6 +221,12 @@ body {
     gap: 8px;
     margin-top: 10px;
 
+}
+.cert-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+    
 }
 
 .project {
@@ -192,6 +283,11 @@ body {
     border: 1px solid black;
     cursor: pointer;
 }
+.submenu button:active,
+.submenu button:focus {
+    background: darkgray;
+    outline: none;
+}
 
 #studies .subsection {
     display: flex;
@@ -204,6 +300,30 @@ body {
     display: flex;
     flex-direction:row;
 }
+#tools {
+    display: block; /* Para asegurarse de que el contenedor se muestre */
+}
+.tools-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between; /* Espacia los elementos para llenar el contenedor */
+}
+.tool-item {
+    width: 48%; /* Aproximadamente la mitad del contenedor */
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+}
+.tool-item i {
+    margin-right: 8px; /* Espacio entre el icono y el texto */
+    font-size: 24px;
+}
+#experience .section {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+}
+
 
 
 .contact-icons img {
@@ -219,7 +339,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(63, 18, 154, 0.5);
     justify-content: center;
     align-items: center;
 }
@@ -350,19 +470,65 @@ body {
 
 
 
-@media (max-width: 600px) {
+@media (max-width: 605px) {
+    
+    .window {
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+        box-shadow: none;
+        border: none;
+    }
+    .menu {
+        display: flex;
+         
+        flex-direction:column-reverse;
+        margin-bottom: 20px;
+        width: 100%;
+    }
+    
+    .menu button {
+        font-family: 'MS Sans Serif', Tahoma, sans-serif;
+        padding-right: 10px;
+        background: lightgray;
+        border: 1px solid black;
+        cursor: pointer;
+        font-size: 12px;
+        margin: 4px; 
+    }
+    .menu button:active,
+    .menu button:focus {
+        background: darkgray;
+        outline: none;
+    }
     .about{
         display: flex;
         flex-wrap:wrap;
        
-      
-       
+    }
+    .about-container {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+        
+        
     }
     .about img {
         width: 100%;
         height: 100%;
         margin: 0;
         padding: 0;
+    
+       
         
     }
     .about-text {
@@ -398,29 +564,28 @@ body {
    
    }  
     
-     .window {
-         width: 100%;
-         height: 100%;
-         position: fixed;
-         top: 0;
-         left: 0;
-         margin: 0;
-         padding: 0;
-         box-shadow: none;
-         border: none;
-     }
-     .menu {
-         display: flex;
-         
-         flex-direction:column-reverse;
-      
-        
-     }
-     .menu button {
-         font-size: 12px;
-         margin: 4px; 
- 
-     }
+  
+
   
  }
+
+
+ @media only screen and (min-width: 1400px)  {
+    body {
+        background-color: #008080;
+        color: black;
+        margin-top: auto;
+        margin-bottom: auto;
+        padding: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+   .window {
+      display:flex;
+      flex-direction:column;
+      
+    
+    }
+}
 
