--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ body {
     margin-right: 20px;
 }
 .about-photo img {
-    width: 100px; /* Ajusta según sea necesario */
+    width: 70px; /* Ajusta según sea necesario */
     height: auto;
     border: 2px solid black;
 }
@@ -163,7 +163,7 @@ body {
     background-color: #008080;
     color: white;
     border: none;
-    padding: 10px;
+    padding: 6px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -506,27 +506,31 @@ body {
         outline: none;
     }
     .about{
-        display: flex;
-        flex-wrap:wrap;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+       justify-content: center;
+       width: 100%;
+       height: 100%;
+       margin: 0;
+       padding: 0;
        
     }
     .about-container {
         width: 100%;
         margin: 0;
         padding: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+      
+        
         
         
         
     }
+
     .about img {
         width: 100%;
         height: 100%;
-        margin: 0;
-        padding: 0;
+        flex-wrap: wrap;
     
        
         
