--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,9 @@ body {
 }
 
 .menu {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
     margin-bottom: 20px;
 }
 
@@ -136,7 +139,7 @@ body {
     
 }
 .about-details p {
-    margin: 5px 0;
+    margin: 2px 0;
     text-align: justify;
     font-family: 'MS Sans Serif', Tahoma, sans-serif;
 
@@ -150,6 +153,7 @@ body {
 }
 .about-photo {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-right: 20px;
@@ -168,7 +172,7 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 10px 0;
+    margin: 4px 0;
     cursor: pointer;
     font-family: 'MS Sans Serif', Tahoma, sans-serif;
 }
@@ -521,10 +525,6 @@ body {
         margin: 0;
         padding: 0;
       
-        
-        
-        
-        
     }
 
     .about img {
@@ -553,7 +553,7 @@ body {
    
     .about-details {
         margin-left: 0;
-        margin-top: 10px;
+        margin-top: 2px;
         text-align: left;
        
     }
