--- a/styles.css
+++ b/styles.css
@@ -50,17 +50,7 @@ body {
     
 }
 
-.maximized {
-    width: 100% !important;
-    height: 100% !important;
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    box-shadow: none;
-    border: none;
-}
+
 
 
 .title-bar {
@@ -84,9 +74,23 @@ body {
     text-align: center;
     cursor: pointer;
 }
+.minimized {
+    display: none;
+}
+.maximized {
+    width: 100% !important;
+    height: 100% !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+    border: none;
+}
 
 .window-body {
-    padding: 8px;
+    padding: 6px;
     background: white;
     border: 2px solid black;
     
@@ -96,7 +100,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
 }
 
 .menu button {
@@ -122,15 +126,14 @@ body {
     margin-top: 0;
 }
 
-.minimized {
-    display: none;
-}
+/** ABOUT SECTION */
 .about-container {
     display: flex;
     flex-direction:column;
    
     margin-bottom: 20px;
 }
+
 
 .about-details {
     display: flex;
@@ -140,7 +143,6 @@ body {
 .about-details p {
     margin: 2px 0;
     text-align: justify;
-    font-family: 'MS Sans Serif', Tahoma, sans-serif;
 
 }
 .about-details a {
@@ -155,19 +157,20 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-right: 20px;
+    margin-right: 14px;
 }
 .about-photo img {
-    width: 70px; /* Ajusta según sea necesario */
+    width:20%; /* Ajusta según sea necesario */
     height: auto;
     border: 2px solid black;
 }
 .contact-details {
     display: flex;
     gap: 10px; /* Ajusta el espacio entre los iconos */
-    margin-top: 10px; /* Ajusta el espacio superior si es necesario */
-    margin-bottom: 10px;
+    margin-top: 6px; /* Ajusta el espacio superior si es necesario */
+    margin-bottom: 8px;
    width: 100%;
+   font-size: 20px;
    justify-content: center;
 }
 
@@ -192,6 +195,29 @@ body {
 
 .download-cv:hover {
     background-color: #006666;
+}
+/*** PROJECTS ***/
+.project {
+    background: lightgray;
+    border: 2px solid black;
+    padding: 10px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.project:hover {
+    background: silver;
+}
+.project-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+/*** EXPERIENCE ***/
+#experience .section {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
 }
 .experience-grid{
   
@@ -225,38 +251,7 @@ body {
     font-style: italic;
     color: darkblue;
 }
-
-
-.project-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-}
-.bootcamp-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
-    margin-top: 10px;
-
-}
-.cert-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
-    
-}
-
-.project {
-    background: lightgray;
-    border: 2px solid black;
-    padding: 10px;
-    cursor: pointer;
-    text-align: center;
-}
-
-.project:hover {
-    background: silver;
-}
+/*** STUDIES ***/
 #studies .study-item:hover {
     background: rgb(160, 160, 160);
 }
@@ -267,6 +262,13 @@ body {
     margin: 10px 0;
     background: lightgray;
     cursor: pointer;
+}
+#studies .subsection {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+   
+    
 }
 .study-summary {
     font-weight: bold;
@@ -287,12 +289,21 @@ body {
     margin-top: 4px;
 }
 
-.contact-icons {
-    display: flex;
-    justify-content: space-around;
-    margin-top: 20px;
+
+
+.bootcamp-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+    margin-top: 10px;
+
 }
-.submenu button {
+.cert-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+    
+}.submenu button {
 
     margin-right: 10px;
     padding: 5px;
@@ -306,13 +317,15 @@ body {
     outline: none;
 }
 
-#studies .subsection {
+
+.contact-icons {
     display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-   
-    
+    justify-content: space-around;
+    margin-top: 20px;
 }
+
+
+/*** SKILLS ***/
 #skills .submenu{
     display: flex;
     flex-direction:row;
@@ -335,11 +348,6 @@ body {
     margin-right: 8px; /* Espacio entre el icono y el texto */
     font-size: 24px;
 }
-#experience .section {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-}
 
 
 
@@ -347,6 +355,9 @@ body {
     width: 40px;
     height: 40px;
 }
+
+
+/*** MODAL ***/
 
 
 .modal {
@@ -384,7 +395,7 @@ body {
     right: 1px;
     left: 1px;
     width: 100%;
-    height: 40px;
+    height: 35px;
     background: silver;
     border-top: 2px solid black;
     display: flex;
@@ -401,7 +412,7 @@ body {
     background: lightgray;
     border: 2px outset;
     padding: 0 10px;
-    height: 28px;
+    height: 25px;
     cursor: pointer;
 }
 
@@ -458,16 +469,16 @@ body {
     background: lightgray;
     border: 2px inset;
     padding: 0 5px;
-    height: 30px;
-    width: 100px;
+    height: 25px;
+    width: 8%;
     display: flex;
     align-items: center;
 }
 #taskbarVolume {
     display: flex;
    padding: 0 10px;
-   height: 20px;
-   width: 4px;
+   height: 50%;
+   width: 2px;
 }
 .copyright {
     font-family: 'MS Sans Serif', Tahoma, sans-serif;
@@ -485,7 +496,7 @@ body {
     flex-direction: column; /* Alinea el contenido verticalmente */
 }
 
-
+/*** MEDIA QUERIES ***/
 
 @media (max-width: 605px) {
     
@@ -568,34 +579,21 @@ body {
    #modalContent {
     justify-content: center;
   
-    
    
    }  
+   .taskbar-time {
+    font-size: 10px;
+    background: lightgray;
+    border: 2px inset;
+    padding: 0 5px;
+    width: 20%;
+    display: flex;
+    align-items: center;
+}
     
-  
 
   
  }
 
 
-
-
- @media only screen and (min-width: 1400px)  {
-    body {
-        background-color: #008080;
-        color: black;
-        margin-top: auto;
-        margin-bottom: auto;
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-   .window {
-      display:flex;
-      flex-direction:column;
-      
-    
-    }
-}
 
