--- a/styles.css
+++ b/styles.css
@@ -488,7 +488,7 @@ body {
 #taskbarVolume {
     display: flex;
    padding: 0 10px;
-   height: 50%;
+   height: 60%;
    width: 2px;
 }
 .copyright {
@@ -505,6 +505,8 @@ body {
     white-space: normal; /* Asegura que el texto se ajuste y se quiebre */
     flex-direction: column; /* Alinea el contenido verticalmente */
 }
+
+
 
 /*** MEDIA QUERIES ***//* 
 @media (max-width: 330px) {
@@ -646,7 +648,7 @@ body {
 /*  */
 
 .modal .window {
-    top: 350px;
+    top: 250px;
     width: 100%;
     height: 100%;
     background: none;
@@ -676,9 +678,28 @@ body {
     background: lightgray;
     border: 2px inset;
     padding: 0 5px;
-    width: 20%;
+    width: 25%;
     display: flex;
     align-items: center;
+    flex-direction: row;
+}
+#taskbarClock {
+    
+   height: 10%;
+   width: 10px;
+   padding: 0 10px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-size: 10px;
+}
+
+#taskbarVolume {
+    display: flex;
+   padding: 0 10px;
+   height: 70%;
+   width: 15px;
+   justify-content: center;
 }
     
 
@@ -701,8 +722,8 @@ body {
 #taskbarVolume {
     display: flex;
    padding: 0 10px;
-   height: 40%;
-   width: 2px;
+   height: 50%;
+   width: 9px;
 }
  }
 
